--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,27 +10,36 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label=" "
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:label="RequestFridge" >
-        </activity>
-
+        <activity android:name=".F1_Fridge" />
+        <activity android:name=".F2_List" />
+        <activity android:name=".F3_Recipe" />
+        <activity android:name=".F1_DBManager" />
+        <activity android:name=".F1_GridViewAdapter" />
+        <activity android:name=".F1_Dialog" />
+        <activity android:name=".F2_DBManager" />
+        <activity android:name=".F2_Dialog" />
+        <activity android:name=".F2_ListViewAdapter" />
+        <activity android:name=".Item" />
+        <activity android:name=".KakaoSDKAdapter" />
+        <activity android:name=".Shopping" />
+        <activity android:name=".TabPagerAdapter" />
+        <activity android:name=".F2_listview"></activity>
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
-
-
     </application>
 
 </manifest>
