--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.kgm13.requestfridge">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:name=".GlobalApplication"
@@ -22,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".OCRActivity"
+            android:label=" "
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".F1_Fridge" />
         <activity android:name=".F2_List" />
         <activity android:name=".F3_Recipe" />
