--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,19 +31,24 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.jakewharton:butterknife:7.0.1'
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    testCompile 'junit:junit:4.12'
     compile group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
     compile 'com.google.api-client:google-api-client-android:1.22.0' exclude module: 'httpclient'
     compile 'com.google.http-client:google-http-client-gson:1.22.0' exclude module: 'httpclient'
-    compile 'com.google.apis:google-api-services-vision:v1-rev30-1.22.0'
-    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile files('libs/jxl.jar')
 
+
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.apis:google-api-services-vision:v1-rev30-1.22.0'
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    compile 'com.google.firebase:firebase-core:9.6.0'
+    compile 'com.google.firebase:firebase-auth:9.6.0'
+    compile 'com.google.firebase:firebase-messaging:9.6.0'
+
+    testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
