--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     package="com.example.kgm13.requestfridge">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.example.kgm13.requestfridge.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -51,6 +56,21 @@
         <activity android:name=".Login_Sign_up" />
         <activity android:name=".Dialog_share" />
         <activity android:name=".Dialog_Shareconfirm"></activity>
+
+        <service android:name=".FirebaseMessagingReceive" />
+
     </application>
+
+    <service android:name=".FirebaseInstanceIDService">
+        <intent-filter>
+            <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+        </intent-filter>
+    </service>
+    <service android:name=".FirebaseMessagingService">
+        <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        </intent-filter>
+    </service>
+
 
 </manifest>
