--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".F1_Fridge" />
         <activity android:name=".F2_List" />
         <activity android:name=".F3_Recipe" />
+        <activity android:name=".F3_Recipeview"/>
         <activity android:name=".F1_DBManager" />
         <activity android:name=".F1_GridViewAdapter" />
         <activity android:name=".F1_Dialog" />
