--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity
             android:name=".MainActivity"
             android:label=" "
+            android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".LoginActivity">
             <intent-filter>
@@ -59,6 +60,7 @@
 
         <service android:name=".FirebaseMessagingReceive" />
 
+        <receiver android:name=".AlarmReceiver"/>
     </application>
 
     <service android:name=".FirebaseInstanceIDService">
@@ -71,6 +73,8 @@
             <action android:name="com.google.firebase.MESSAGING_EVENT" />
         </intent-filter>
     </service>
+    <service android:name=".Alarm"
+        android:enable="true"/>
 
 
 </manifest>
