--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,8 +74,10 @@
             <action android:name="com.google.firebase.MESSAGING_EVENT" />
         </intent-filter>
     </service>
-    <service android:name=".Alarm"
-        android:enable="true"/>
+    <service
+        android:name=".Alarm"
+        android:enabled="true" >
+    </service>
 
 
 </manifest>
